--- a/Source/WPF/MyMoney/Controls/QuickFilterControl.xaml
+++ b/Source/WPF/MyMoney/Controls/QuickFilterControl.xaml
@@ -6,6 +6,7 @@
              xmlns:c="clr-namespace:Walkabout.Controls"
              xmlns:help="clr-namespace:Walkabout.Help"
              help:HelpService.HelpKeyword="Quick Search"
+             xmlns:ui="http://schemas.modernwpf.com/2019"
              mc:Ignorable="d" 
              d:DesignHeight="24" d:DesignWidth="128">
 
@@ -23,12 +24,14 @@
                 <!-- MAGNIFY GLASS -->
                 <Viewbox Height="14" Width="14" Margin="4 0 0 0">
                     <Grid Opacity="0.5">
-                        <Ellipse Fill="Transparent"  Stroke="Black"
+                        <Ellipse Fill="Transparent"                                  
+                                 Stroke="{DynamicResource ListItemForegroundLowBrush}" 
                                  HorizontalAlignment="Left" 
                                  Height="14" Width="14"  
                                  VerticalAlignment="Top" StrokeThickness="3" />
                         <Path Data="M10,10 L16,16" 
-                              Stroke="Black" StrokeThickness="3.5" StrokeEndLineCap="Round" StrokeStartLineCap="Triangle" />
+                              Stroke="{DynamicResource ListItemForegroundLowBrush}" 
+                              StrokeThickness="3.5" StrokeEndLineCap="Round" StrokeStartLineCap="Triangle" />
                     </Grid>
                 </Viewbox>
 
@@ -40,6 +43,7 @@
                          KeyUp="OnTextBox_KeyUp" 
                          TextChanged="OnInputFilterText_TextChanged" 
                          Margin="2,0,2,0" 
+                         ui:TextBoxHelper.IsEnabled="False"
                          />
 
                 <!-- CANCEL BUTTON -->
