--- a/Source/WPF/MyMoney/Themes/generic.xaml
+++ b/Source/WPF/MyMoney/Themes/generic.xaml
@@ -28,6 +28,7 @@
         <Setter Property="BorderThickness" Value="0"/>
         <Setter Property="Foreground" Value="white"/>
         <Setter Property="controls:CalculatorPopup.CalculatorEnabled" Value="True" />
+        <Setter Property="ui:TextBoxHelper.IsEnabled" Value="False"/>
         <Style.Triggers>
             <Trigger Property="Validation.HasError" Value="True">
                 <Setter Property="Background" Value="{DynamicResource NegativeCurrencyForegroundBrush}"/>
@@ -46,12 +47,44 @@
     <c:NullOrEmptyStringToVisible x:Key="NullOrEmptyStringToVisible" />
     <c:CategoryTypeLetterConverter x:Key="CategoryTypeLetterConverter"/>
 
-    <sys:Double x:Key="DataGridRowMinHeight">32</sys:Double>
     <sys:String x:Key="SortIconAscending">&#xE74A;</sys:String>
     <sys:String x:Key="SortIconDescending">&#xE74B;</sys:String>
     <sys:String x:Key="RowGroupHeaderIconClosed">&#xE0E3;</sys:String>
     <sys:String x:Key="RowGroupHeaderIconOpened">&#xE0E5;</sys:String>
 
+    <!-- Some ModernWPF overrides -->
+    <!-- begin D:\git\ModernWpf\ModernWpf\DensityStyles\Compact.xaml -->
+    <sys:Double x:Key="ControlContentThemeFontSize">14</sys:Double>
+    <sys:Double x:Key="ContentControlFontSize">14</sys:Double>
+    <sys:Double x:Key="TextControlThemeMinHeight">24</sys:Double>
+    <Thickness x:Key="TextControlThemePadding">2,2,6,1</Thickness>
+    <sys:Double x:Key="ListViewItemMinHeight">32</sys:Double>
+    <sys:Double x:Key="TreeViewItemMinHeight">24</sys:Double>
+    <Thickness x:Key="TimePickerHostPadding">0,1,0,2</Thickness>
+    <Thickness x:Key="DatePickerHostPadding">0,1,0,2</Thickness>
+    <Thickness x:Key="DatePickerHostMonthPadding">9,0,0,1</Thickness>
+    <Thickness x:Key="ComboBoxEditableTextPadding">10,0,30,0</Thickness>
+    <sys:Double x:Key="ComboBoxMinHeight">24</sys:Double>
+    <Thickness x:Key="ComboBoxPadding">12,1,0,3</Thickness>
+    <sys:Double x:Key="NavigationViewItemOnLeftMinHeight">32</sys:Double>
+    <sys:Double x:Key="GridViewColumnHeaderMinHeight">25</sys:Double>
+    <sys:Double x:Key="GridViewItemContainerMinHeight">24</sys:Double>
+    <sys:Double x:Key="DataGridRowMinHeight">24</sys:Double>
+
+    <!-- CompactDatePickerTimePickerFlyout.xaml -->
+    <sys:Double x:Key="TimePickerFlyoutPresenterItemHeight">32</sys:Double>
+    <sys:Double x:Key="TimePickerFlyoutPresenterHighlightHeight">32</sys:Double>
+    <sys:Double x:Key="TimePickerFlyoutPresenterAcceptDismissHostGridHeight">33</sys:Double>
+    <sys:Double x:Key="TimePickerPopupVerticalOffset">16</sys:Double>
+    <Thickness x:Key="TimePickerFlyoutPresenterItemPadding">0,0,0,1</Thickness>
+    <sys:Double x:Key="DatePickerFlyoutPresenterItemHeight">32</sys:Double>
+    <sys:Double x:Key="DatePickerFlyoutPresenterHighlightHeight">32</sys:Double>
+    <sys:Double x:Key="DatePickerFlyoutPresenterAcceptDismissHostGridHeight">33</sys:Double>
+    <Thickness x:Key="DatePickerFlyoutPresenterItemPadding">0,0,0,1</Thickness>
+    <Thickness x:Key="DatePickerFlyoutPresenterMonthPadding">9,0,0,1</Thickness>
+
+    <!-- end D:\git\ModernWpf\ModernWpf\DensityStyles\Compact.xaml -->
+    
     <Style TargetType="DataGridColumnHeader" BasedOn="{StaticResource DefaultDataGridColumnHeaderStyle}">
         <Setter Property="Template">
             <Setter.Value>
