--- a/Source/WPF/MyMoney/Dialogs/CategoryDialog.xaml
+++ b/Source/WPF/MyMoney/Dialogs/CategoryDialog.xaml
@@ -77,6 +77,7 @@
                 Padding="0" 
                 MaxDropDownHeight="450"
                 IsEditable="True" StaysOpenOnEdit="True" 
+                Style="{DynamicResource DefaultComboBoxStyle}"
                 IsTextSearchCaseSensitive="False">
                 <ComboBox.ItemsPanel>
                     <ItemsPanelTemplate>
