--- a/Source/WPF/MyMoney/Views/TransactionsView.xaml
+++ b/Source/WPF/MyMoney/Views/TransactionsView.xaml
@@ -552,8 +552,7 @@
             <Setter Property="ClipboardCopyMode" Value="None"/>
             <Setter Property="ContentMargin" Value="0,0,0,30"/>
             <Setter Property="VirtualizingStackPanel.IsVirtualizing" Value="True"/>
-            <!-- Recycling breaks the TransactionConnector for some unknown reason -->
-            <Setter Property="VirtualizingStackPanel.VirtualizationMode" Value="Standard"/>
+            <Setter Property="VirtualizingStackPanel.VirtualizationMode" Value="Recycling"/>
         </Style>
 
         <Style x:Key="MyDataGridStyle2" TargetType="DataGrid">
@@ -569,7 +568,7 @@
             <Setter Property="RowDetailsVisibilityMode" Value="Collapsed"/>
             <Setter Property="ClipboardCopyMode" Value="None"/>
             <Setter Property="VirtualizingStackPanel.IsVirtualizing" Value="True"/>
-            <Setter Property="VirtualizingStackPanel.VirtualizationMode" Value="Standard"/>
+            <Setter Property="VirtualizingStackPanel.VirtualizationMode" Value="Recycling"/>
         </Style>
 
         <Style x:Key="MyDataGridRowStyle" TargetType="DataGridRow">
