--- a/Source/WPF/MyMoney/Views/SecuritiesView.xaml
+++ b/Source/WPF/MyMoney/Views/SecuritiesView.xaml
@@ -45,7 +45,7 @@
             <Setter Property="RowDetailsVisibilityMode" Value="Collapsed"/>
             <Setter Property="ClipboardCopyMode" Value="None"/>
             <Setter Property="VirtualizingStackPanel.IsVirtualizing" Value="True"/>
-            <Setter Property="VirtualizingStackPanel.VirtualizationMode" Value="Standard"/>
+            <Setter Property="VirtualizingStackPanel.VirtualizationMode" Value="Recycling"/>
         </Style>
 
         <Style x:Key="GridComboStyle" TargetType="{x:Type ComboBox}"  BasedOn="{StaticResource DefaultComboBoxStyle}">
