--- a/Source/WPF/MyMoney/Dialogs/CategoryDialog.xaml
+++ b/Source/WPF/MyMoney/Dialogs/CategoryDialog.xaml
@@ -4,9 +4,10 @@
         xmlns:local2="clr-namespace:Walkabout.Controls"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        mc:Ignorable="d"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+        xmlns:ui="http://schemas.modernwpf.com/2019"
+        mc:Ignorable="d"
         Title="Category"  
         ShowInTaskbar="False"
         WindowStartupLocation="CenterOwner" 
@@ -53,15 +54,27 @@
 
             <!-- Color -->
             <TextBlock Grid.Column="0" Grid.Row="3" Text="Color:" HorizontalAlignment="Right" VerticalAlignment="Center"/>
-            <local2:DropDownButton VerticalAlignment="Center" HorizontalAlignment="Left" Grid.Column="1" Grid.Row="3" x:Name="ColorDropDown" Margin="10">
-                <local2:DropDownButton.Popup>
-                    <Popup MinWidth="300" Height="300" >
-                        <local2:ColorPickerPanel Background="White" BorderBrush="Gray" BorderThickness="1" ColorChanged="ColorPickerPanel_ColorChanged" Focusable="true"/>
-                    </Popup>
-                </local2:DropDownButton.Popup>
-                <Rectangle Width="30" Height="20">
-                </Rectangle>
-            </local2:DropDownButton>
+            <ui:DropDownButton
+                        x:Name="ColorDropDown"
+                        Grid.Column="1" Grid.Row="3" 
+                        AutomationProperties.Name="ColorDropDown"
+                        VerticalAlignment="Center" HorizontalAlignment="Left"
+                        Margin="10"
+                       >
+                <ui:DropDownButton.Content>
+                    <Rectangle Width="30" Height="20">
+                    </Rectangle>
+                </ui:DropDownButton.Content>
+                <ui:DropDownButton.Flyout>
+                    <ui:Flyout
+                                x:Name="ColorDropDownFlyout"
+                                AutomationProperties.Name="ColorDropDownFlyout"
+                                Placement="Bottom">
+                        <local2:ColorPickerPanel Width="300" Height="300"
+                                                 BorderThickness="1" ColorChanged="ColorPickerPanel_ColorChanged" Focusable="true"/>
+                    </ui:Flyout>
+                </ui:DropDownButton.Flyout>
+            </ui:DropDownButton>
 
             <!-- Tax association-->
             <TextBlock Grid.Column="0" Grid.Row="4" Text="Tax Category:" HorizontalAlignment="Right" VerticalAlignment="Center"/>
