Soften the background behind the reports and the charts. Make the SecuritiesView show a stock chart for active selection.

--- a/Source/WPF/MyMoney/Charts/CategoryChart.xaml
+++ b/Source/WPF/MyMoney/Charts/CategoryChart.xaml
@@ -13,7 +13,7 @@
             <MenuItem Header="Export..." Click="OnExport"/>
         </ContextMenu>
     </UserControl.ContextMenu>
-    <Grid Background="Transparent">
+    <Grid  Background="{DynamicResource SystemControlPageBackgroundChromeLowBrush}">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"/>
             <ColumnDefinition Width="Auto"/>
