--- a/Source/WPF/MyMoney/Charts/RentalChart.xaml
+++ b/Source/WPF/MyMoney/Charts/RentalChart.xaml
@@ -4,6 +4,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              mc:Ignorable="d" 
+             Background="{DynamicResource SystemControlPageBackgroundChromeLowBrush}"   
              d:DesignHeight="300" d:DesignWidth="300">
     
     <Grid Name="MaingGrid" SizeChanged="MaingGrid_SizeChanged" MouseLeftButtonUp="MaingGrid_MouseLeftButtonUp">
