--- a/Source/WPF/MyMoney/View Selectors/AccountsControl.xaml
+++ b/Source/WPF/MyMoney/View Selectors/AccountsControl.xaml
@@ -11,7 +11,6 @@
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
 
-
     <UserControl.Resources>
 
         <c:MoneyColorConverter x:Key="MoneyColorConverter"/>
@@ -97,6 +96,7 @@
              ScrollViewer.HorizontalScrollBarVisibility="Disabled"
              Background="{DynamicResource SystemControlPageBackgroundChromeLowBrush}"             
              UseLayoutRounding="True"
+             BorderThickness="0"
              >
         <ListBox.ItemContainerStyle>
             <Style TargetType="ListBoxItem" BasedOn="{StaticResource DefaultListBoxItemStyle}">
